feat: Add page layout for news listings page

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -17,6 +17,7 @@ $site-width: 80rem;
 $margin-gap: 1rem;
 $gutter: 1.5rem;
 
-$breakpoint: 768px;
+$breakpoint-sm: 768px;
+$breakpoint-md: 992px;
 
 $border-radius: .5rem;
