--- a/src/styles/components/_card.scss
+++ b/src/styles/components/_card.scss
@@ -78,7 +78,7 @@
     }
   }
 
-  @media (min-width: $breakpoint) {
+  @media (min-width: $breakpoint-sm) {
     &__content {
       padding: 3rem;
     }
