refactor: Improve responsive styling on ArticleCard

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -7,7 +7,7 @@ $text-color: #222;
 
 $font-size-base: 16px !default;
 
-$font-size-xl: 1.75rem;
+$font-size-xl: 1.5rem;
 $font-size-lg: 1.25rem;
 $font-size-md: 1rem;
 $font-size-sm: .875rem;
@@ -17,6 +17,7 @@ $site-width: 80rem;
 $margin-gap: 1rem;
 $gutter: 1.5rem;
 
+$breakpoint-xs: 640px;
 $breakpoint-sm: 768px;
 $breakpoint-md: 992px;
 
