--- a/src/styles/components/_card.scss
+++ b/src/styles/components/_card.scss
@@ -29,7 +29,7 @@ $img-width: 67.25%;
       width: 100%;
       object-fit: cover;
       object-position: left;
-      transition: transform 0.5s ease-in-out;
+      transition: transform .3s ease-in-out;
     }
   }
 
@@ -69,7 +69,8 @@ $img-width: 67.25%;
     }
 
     img {
-      transform: scale(1.5);
+      transform: scale(1.25);
+      transition: transform 2s ease-in-out;
     }
   }
 
