--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -1,27 +1,6 @@
-@mixin multi-line-ellipsis($lineHeight: 1.2em, $lineCount: 1, $bgColor: #fff) {
+@mixin multi-line-ellipsis($lineCount: 1) {
+  display: -webkit-box;
   overflow: hidden;
-  position: relative;
-  line-height: $lineHeight;
-  max-height: $lineHeight * $lineCount;
-  text-align: justify;
-  margin-right: -1em;
-  padding-right: 1em;
-
-  &:before {
-    content: "...";
-    position: absolute;
-    right: 0;
-    bottom: 0;
-  }
-
-  &:after {
-    content: "";
-    position: absolute;
-    right: 0;
-    width: 1em;
-    height: 1em;
-    margin-top: 0.2em;
-    background: $bgColor;
-    transition: background-color .3s linear;
-  }
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: $lineCount;
 }
